StudiesTable: fix z-index of cell Modals
I have to raise the z-index of the li.study which is presently active

--- a/client/components/StudiesTable.scss
+++ b/client/components/StudiesTable.scss
@@ -84,6 +84,10 @@ $column_width: 300px;
     }
   }
 
+  .study.active {
+    z-index: 2;
+  }
+
   .study.replication + .study:not(.replication) .cellGroup {
     box-shadow: -5px 0 5px -2px $gray;
   }
